optimizer/src/snapshots/spec_example_with_style.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStyles$ } from '@qwik.dev/core';

export const Foo = component$(() => {
	useStyles$('.class {}');
	return (
		<div class="class"/>
	);
}, {
	tagName: "my-foo",
});

============================= test.tsx_Foo_component_useStyles_pV9TSCBIhw8.tsx (ENTRY POINT)==

export const Foo_component_useStyles_pV9TSCBIhw8 = ".class {}";


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_useStyles_pV9TSCBIhw8",
  "entry": null,
  "displayName": "test.tsx_Foo_component_useStyles",
  "hash": "pV9TSCBIhw8",
  "canonicalFilename": "test.tsx_Foo_component_useStyles_pV9TSCBIhw8",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    111,
    122
  ]
}
*/
============================= test.tsx_Foo_component_HTDRsvUbLiE.tsx (ENTRY POINT)==

import { useStylesQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
export const Foo_component_HTDRsvUbLiE = ()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_pV9TSCBIhw8, "Foo_component_useStyles_pV9TSCBIhw8"));
	return <div class="class" />;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    163
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_pV9TSCBIhw8 = ()=>import("./test.tsx_Foo_component_useStyles_pV9TSCBIhw8");
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
== DIAGNOSTICS ==

[]
