optimizer/src/snapshots/spec_issue_5008.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore } from "@qwik.dev/core";

export default component$(() => {
const store = useStore([{ value: 0 }]);
return (
	<>
	<button onClick$={() => store[0].value++}>+1</button>
	{store.map(function (v, idx) {
		return <div key={"fn_" + idx}>Function: {v.value}</div>;
	})}
	{store.map((v, idx) => (
		<div key={"arrow_" + idx}>Arrow: {v.value}</div>
	))}
	</>
);
});

============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
const i_6pPnWSWL0tY = ()=>import("./test.tsx_test_component_button_on_click_6pPnWSWL0tY");
export const test_component_LUXeXe0DQrg = ()=>{
	const store = useStore([{ value: 0 }]);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ qrl(i_6pPnWSWL0tY, "test_component_button_on_click_6pPnWSWL0tY", [store]) }, null, "+1", 3, null),
		store.map(function(v, idx) {
			return /*#__PURE__*/ _jsxSorted("div", null, null, ["Function:", _wrapProp(v)], 1, "fn_" + idx);
		}),
		store.map((v, idx)=>/*#__PURE__*/ _jsxSorted("div", null, null, ["Arrow:", _wrapProp(v)], 1, "arrow_" + idx))
	], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    82,
    385
  ]
}
*/
============================= test.tsx_test_component_button_on_click_6pPnWSWL0tY.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const test_component_button_on_click_6pPnWSWL0tY = ()=>{
	const [store] = useLexicalScope();
	return store[0].value++;
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_button_on_click_6pPnWSWL0tY",
  "entry": null,
  "displayName": "test.tsx_test_component_button_on_click",
  "hash": "6pPnWSWL0tY",
  "canonicalFilename": "test.tsx_test_component_button_on_click_6pPnWSWL0tY",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
