optimizer/src/snapshots/spec_issue_7216_add_test.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@builder.io/qwik';
export default component$((props) => {
  return (<p 
		onHi$={() => 'hi'} 
		{...props.foo} 
		onHello$={props.helloHandler$} 
		{...props.rest} 
		onVar$={props.onVarHandler$} 
		onConst$={() => 'const'} 
		asd={"1"}
	/>);
});

============================= test.tsx_test_component_p_on_const_i552ahxj0Ag.js (ENTRY POINT)==

export const test_component_p_on_const_i552ahxj0Ag = ()=>"const";


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_p_on_const_i552ahxj0Ag",
  "entry": null,
  "displayName": "test.tsx_test_component_p_on_const",
  "hash": "i552ahxj0Ag",
  "canonicalFilename": "test.tsx_test_component_p_on_const_i552ahxj0Ag",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onConst$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_test_component_p_on_hi_UJAnjrKiyXk.js (ENTRY POINT)==

export const test_component_p_on_hi_UJAnjrKiyXk = ()=>"hi";


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_p_on_hi_UJAnjrKiyXk",
  "entry": null,
  "displayName": "test.tsx_test_component_p_on_hi",
  "hash": "UJAnjrKiyXk",
  "canonicalFilename": "test.tsx_test_component_p_on_hi_UJAnjrKiyXk",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onHi$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_i552ahxj0Ag = ()=>import("./test.tsx_test_component_p_on_const_i552ahxj0Ag");
const i_UJAnjrKiyXk = ()=>import("./test.tsx_test_component_p_on_hi_UJAnjrKiyXk");
const _hf0 = (p0)=>p0.helloHandler$;
const _hf0_str = "p0.helloHandler$";
const _hf1 = (p0)=>p0.onVarHandler$;
const _hf1_str = "p0.onVarHandler$";
export const test_component_LUXeXe0DQrg = (props)=>{
	return /*#__PURE__*/ _jsxSplit("p", {
		"on:hi": /*#__PURE__*/ qrl(i_UJAnjrKiyXk, "test_component_p_on_hi_UJAnjrKiyXk"),
		..._getVarProps(props.foo),
		"on:hello": _fnSignal(_hf0, [props], _hf0_str),
		..._getVarProps(props.rest),
		"on:var": _fnSignal(_hf1, [props], _hf1_str),
		"on:const": /*#__PURE__*/ qrl(i_i552ahxj0Ag, "test_component_p_on_const_i552ahxj0Ag"),
		asd: "1"
	}, _getConstProps(props.rest), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    73,
    272
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_LUXeXe0DQrg = ()=>import("./test.tsx_test_component_LUXeXe0DQrg");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_LUXeXe0DQrg, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
