optimizer/src/snapshots/spec_lib_mode_fn_signal.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
export const Counter = component$(() => {
	const count = useSignal(0);

	return (
		<div>
			<p>Count: {count.value}</p>
			<p>
				<button onClick$={() => count.value++}>Increment</button>
			</p>
		</div>
	);
});

============================= test.tsx_Counter_component_zTmRHlL09Gg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_Kqq00U8qaIM = ()=>import("./test.tsx_Counter_component_div_p_button_onClick_Kqq00U8qaIM");
export const Counter_component_zTmRHlL09Gg = ()=>{
	const count = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", null, null, [/*#__PURE__*/ _jsxSorted("p", null, null, ["Count:", _wrapProp(count)], 1, null), /*#__PURE__*/ _jsxSorted("p", null, null, /*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ qrl(i_Kqq00U8qaIM, "Counter_component_div_p_button_onClick_Kqq00U8qaIM", [count]) }, null, "Increment", 3, null), 3, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Counter_component_zTmRHlL09Gg",
  "entry": null,
  "displayName": "test.tsx_Counter_component",
  "hash": "zTmRHlL09Gg",
  "canonicalFilename": "test.tsx_Counter_component_zTmRHlL09Gg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    79,
    257
  ]
}
*/
============================= test.tsx_Counter_component_div_p_button_onClick_Kqq00U8qaIM.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Counter_component_div_p_button_onClick_Kqq00U8qaIM = ()=>{
	const [count] = useLexicalScope();
	return count.value++;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Counter_component_div_p_button_onClick_Kqq00U8qaIM",
  "entry": null,
  "displayName": "test.tsx_Counter_component_div_p_button_onClick",
  "hash": "Kqq00U8qaIM",
  "canonicalFilename": "test.tsx_Counter_component_div_p_button_onClick_Kqq00U8qaIM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_zTmRHlL09Gg = ()=>import("./test.tsx_Counter_component_zTmRHlL09Gg");
export const Counter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_zTmRHlL09Gg, "Counter_component_zTmRHlL09Gg"));


None
== DIAGNOSTICS ==

[]
